--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Party Finder</string>
+    <string name="title_activity_sing_up">SingUp</string>
+    <string name="title_activity_sign_up">SignUp</string>
+    <string name="title_activity_tf">TF</string>
 </resources>
