--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Party Finder</string>
+    <string name="ONLINE">Online</string>
+    <string name="DND">Do Not Disturb</string>
+    <string name="AFK">AFK</string>
 </resources>
