Added app logo, changed app name, AsyncImage icons,  profile-logout localRepository update

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Party Finder</string>
+    <string name="app_name">Party Up</string>
     <string name="partyUp">Party\nUp!</string>
     <string name="login">Login</string>
     <string name="register">Register</string>
